--- a/admin/src/app/components/community-posts/community-posts.component.html
+++ b/admin/src/app/components/community-posts/community-posts.component.html
@@ -109,10 +109,12 @@
 
         <div class="clearfix"></div>
         <!-- MAIN CONTENT AREA STARTS -->
-        <div class="canvascontainer">
-          <p style="font-family: cursive;font-weight: bold; font-size: 50px;margin-bottom: 30px;">Comments reviews Chart</p>
-          <canvas id="myChart" width="50" height="20"></canvas>
-        </div>
+        <section class="statistics-section">
+          <h3 class="statistics-title">Comments statistics</h3>
+          <div class="chart-container">
+            <canvas id="myChart"></canvas>
+          </div>
+        </section>
         
 
         <p style="font-family: cursive;font-weight: bold; font-size: 50px;margin-bottom: 30px;margin-left: 50%;margin-top: 30px;margin-bottom: 30px;">All posts</p>
