--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -97,9 +97,6 @@
                         <a class="" routerLink="/home/bills">Payments</a>
                     </li>
                     
-                    <li>
-                        <a class="" href="hos-patient-invoice.html">Patient Invoice</a>
-                    </li>
                 </ul>
             </li>
             <li class="">
@@ -119,6 +116,16 @@
                         <a class="" routerLink="/home/declinedPosts">Declined Posts</a>
                     </li>
                 </ul>
+            </li>
+            <li class="">
+                <a href="javascript:;">
+                    <i class="img">
+                        <img src="assets\746260-200.png" alt="" class="width-20">
+                    </i>
+                    <span class="title" routerLink="/home/complaints">Complaints</span>
+                    
+                </a>
+                
             </li>
             
             
