--- a/users/src/app/components/footer/footer.component.html
+++ b/users/src/app/components/footer/footer.component.html
@@ -1,16 +1,16 @@
 <footer id="footer">
     <div class="footer-top">
       <div class="container">
-        <div class="row">
+        <div style="display: flex;flex-direction: row;justify-content: space-between;">
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Medicio</h3>
+              <h3 style="font-family: cursive;">MediGest</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Tunisie,Sousse<br>
+                Cité Riadh 5,Rue Brazaville<br><br>
+                <strong>Phone:</strong> +216 25209919<br>
+                <strong>Email:</strong> admin@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -44,14 +44,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div>
+          
 
         </div>
       </div>
