--- a/users/src/app/components/sec-header/sec-header.component.html
+++ b/users/src/app/components/sec-header/sec-header.component.html
@@ -13,7 +13,7 @@
 <header id="header" class="fixed-top">
   <div class="container d-flex align-items-center">
 
-    <a href="index.html" class="logo me-auto"><img src="assets/medical-logo-sign-stock-vector-medical-logo-vector-117790920.jpg" style="border-radius: 50%;height: 120px;width: 120px;" alt=""></a>
+    <!-- <a href="index.html" class="logo me-auto"><img src="assets/medical-logo-sign-stock-vector-medical-logo-vector-117790920.jpg" style="border-radius: 50%;height: 120px;width: 120px;" alt=""></a> -->
     <!-- Uncomment below if you prefer to use an image logo -->
     <!-- <h1 class="logo me-auto"><a href="index.html">Medicio</a></h1> -->
 
@@ -25,7 +25,7 @@
                   <img src="http://127.0.0.1:8088/api/auth/Doctor/files/{{photo}}" style="border-radius: 50%;overflow: hidden;width: 40px;height: 40px;" alt="Image">
                 </span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a routerLink="/doc/home/myProfile">Profile</a></li>
+                <li><a routerLink="/sec/home/patientProfile">Profile</a></li>
                 <li><a  (click)="logout()" style="cursor: pointer;" >Logout</a></li>
                 <li class="dropdown notifications-dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
