--- a/admin/src/app/components/doctor-profile/doctor-profile.component.html
+++ b/admin/src/app/components/doctor-profile/doctor-profile.component.html
@@ -23,28 +23,28 @@
                         <div class="doctors-list v2  relative">
                             <div class="doctors-head relative text-left mb-0">
                                 <div class="doc-img img-circle">
-                                    <img src="http://127.0.0.1:8088/api/auth/Doctor/files/{{onedoctor.photo}}"  class="img-thumbnail center-block" alt="">
+                                    <img src="http://127.0.0.1:8088/api/auth/Doctor/files/{{onedoctor?.photo}}"  class="img-thumbnail center-block" alt="">
                                     <div class="stutas"></div>
                                 </div>
-                                <h3 class="header relative bold">Dr : {{onedoctor.username}}</h3>
-                                <h5 class="boldy">expert in the {{onedoctor.domainMedical.name}} illnesses</h5>
-                                <h5 class="boldy">this doctor is {{stat}}</h5>
-                                <p class="desc relative mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti eveniet sit digni ssimos dolores reiciendis voluptate at quae deleniti voluptatibus molestias.</p>
+                                <h3 class="header relative bold">Dr : {{onedoctor?.username}}</h3>
+                                <h5 class="boldy" style="text-align: center;">expert in the {{onedoctor?.domainMedical?.name}} illnesses</h5>
+                                <h5 class="boldy" style="text-align: center;font-weight: bold;">this doctor is {{stat}}</h5>
+                                <p class="desc relative mb-15">{{onedoctor?.description}}</p>
                                 <div class="doc-rating mb-30">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
-                                    <span>4.8</span>
+                                    <span>{{average}}</span>
                                 </div>
 
                                 <div class="email-div">
                                     <i class="fa fa-envelope f-s-14 mr-10"></i><span>Email</span>
                                     <a href="#" class="blue-text">
-                                        <h5 class="text-info">{{onedoctor.email}}</h5>
+                                        <h5 class="text-info">{{onedoctor?.email}}</h5>
                                     </a>
-                                    <button type="button" class="btn btn-success btn-icon btn-lg mt-10 right15" [routerLink]="['/home/message/',onedoctor.username]" >
+                                    <button type="button" class="btn btn-success btn-icon btn-lg mt-10 right15" [routerLink]="['/home/message/',onedoctor?.username]" >
                                         <i class="fa fa-send f-s-14"></i> &nbsp; <span>Send Message</span>
                                     </button>
                                     <button *ngIf="showbutton"(click)="confirmDoctor(onedoctor.id)" type="button" class="btn btn-success btn-icon btn-lg mt-10 right15">
@@ -77,18 +77,18 @@
                                 <div class="col-xs-12">
                                     <div class="pat-info-wrapper align-center">
                                         <div class="pat-info text-right mr-10">
-                                            <h2 class="bold m-count">{{messages.length}}</h2>
+                                            <h2 class="bold m-count">{{messages?.length}}</h2>
                                         </div>
                                         <div class="pat-val relative">
                                             <h4 class="value p-text mb-0"><i class="fa fa-envelope message green-text has-shadow f-s-20 mr-10"></i><span>New</span></h4>
                                         </div>
                                     </div>
-                                    <div *ngFor="let message of messages.slice(0,4)" class="relative mb-15">
+                                    <div *ngFor="let message of messages?.slice(0,4)" class="relative mb-15">
                                         <div class="round">S</div>
                                         <div class="designer-info">
-                                            <h6 class="msg-sender">{{message.sender.username}}</h6>
-                                            <small class="text-muted">{{message.content}}</small>
-                                            <h6 class="text-muted mt-0 mb-0">{{message.timestamp}}</h6>
+                                            <h6 class="msg-sender">{{message?.sender?.username}}</h6>
+                                            <small class="text-muted">{{message?.content}}</small>
+                                            <h6 class="text-muted mt-0 mb-0">{{message?.timestamp}}</h6>
                                         </div>
                                     </div>
                                     
@@ -103,7 +103,7 @@
                     
                     <section class="box ">
                         <header class="panel_header">
-                            <h2 class="title pull-left">Notifications</h2>
+                            <h2 class="title pull-left">Patients</h2>
                             <div class="actions panel_actions pull-right">
                                 <a class="box_toggle fa fa-chevron-down"></a>
                                 <a class="box_setting fa fa-cog" data-toggle="modal" href="#section-settings"></a>
@@ -115,52 +115,22 @@
                                 <div class="col-xs-12">
                                     <ul class="project-activity list-unstyled mb-0">
                                         <li class="activity-list ">
-                                            <div class="detail-info v2">
-                                                <div class="doc-img-con pull-left mr-10">
-                                                    <img src="assets/hos-dash/doc3.jpg" width="80" alt="">
+                                            <div class="detail-info v2" *ngFor="let patient of onedoctor?.myPatients?.slice(0,5)">
+                                                <div class="doc-img-con pull-left mr-10" >
+                                                    <img src="http://127.0.0.1:8088/api/auth/Doctor/files/{{patient.photo}}" width="80" alt="">
                                                 </div>
-                                                <div class="visit-doc">
-                                                    <p class="text-muted mb-0 boldy">
-                                                        Dr sultads Send you Photo 
+                                                <div class="visit-doc" >
+                                                    <p class="text-muted mb-0 boldy" style="color:black">
+                                                        {{patient.username}}
                                                     </p>
-                                                    <small class="message">
-                                                        Just Now
-                                                    </small>
+                                                    <span class="message" >
+                                                        {{patient.email}}
+                                                    </span>
                                                     
                                                 </div>
                                             </div>
                                         </li>
-                                        <li class="clearfix"></li>
-                                        <li class="activity-list ">
-                                            <div class="detail-info v2">
-                                                <div class="doc-img-con pull-left mr-10">
-                                                    <i class="fa fa-rocket icon-rounded icon-primary animated fadeIn" style="padding:11px"></i>
-                                                </div>
-                                                <div class="visit-doc">
-                                                    <p class="text-muted mb-0 boldy">
-                                                        Reminder : Treatment Time!
-                                                    </p>
-                                                    <small class="message">
-                                                        25 july - 20:00
-                                                    </small>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="activity-list ">
-                                            <div class="detail-info v2">
-                                                <div class="doc-img-con pull-left mr-10">
-                                                    <i class="fa fa-bar-chart round-success rd-50 w-text animated fadeIn" style="padding:11px"></i>
-                                                </div>
-                                                <div class="visit-doc">
-                                                    <p class="text-muted mb-0 boldy">
-                                                         Resport created successfully 
-                                                    </p>
-                                                    <small class="message">
-                                                        26 Feb - 23:47
-                                                    </small>
-                                                </div>
-                                            </div>
-                                        </li>
+                                       
                                        
                                     </ul>
                                 </div>      
@@ -311,7 +281,7 @@
                                     <div class="detail-info">
                                         <div class="visit-doc">
                                             
-                                            <p class="message" style="text-color:red">
+                                            <p class="message" style="color:red">
                                                 RATING :
                                                 
                                             </p>
