--- a/admin/src/app/components/login/login.component.html
+++ b/admin/src/app/components/login/login.component.html
@@ -9,6 +9,7 @@
 <!-- BEGIN BODY -->
 
 <body class=" login_page">
+    
 
     <div class="container-fluid">
         <div class="login-wrapper row">
@@ -57,6 +58,7 @@
                 <p id="nav">
                     <a class="pull-left" href="#" title="Password Lost and Found">Forgot password?</a>
                     <a class="pull-right" href="ui-register.html" title="Sign Up">Sign Up</a>
+                    <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
                 </p>
 
             </div>
