--- a/users/src/app/components/doc-login/doc-login.component.html
+++ b/users/src/app/components/doc-login/doc-login.component.html
@@ -3,6 +3,7 @@
 	<title>Doctor Registration</title>
 </head>
 <body>
+	<a class="backtohome" routerLink="/">Back to home Page</a>
 	<div class="background">
 		<div class="form-container">
 			<h2>Doctor Login</h2>
@@ -18,6 +19,7 @@
 				<button type="submit"> Login</button>
                 <a routerLink="/doc/Register" class="switch-link">No account ? Register here</a>
 				<a routerLink="/sec/login" class="switch-link">Im a Secretary ! take me to login page</a>
+				<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
 			</form>
 		</div>
 	</div>
