--- a/users/src/app/components/doc-register/doc-register.component.html
+++ b/users/src/app/components/doc-register/doc-register.component.html
@@ -3,6 +3,7 @@
 	<title>Doctor Registration</title>
 </head>
 <body>
+	<a class="backtohome" routerLink="/">Back to home Page</a>
 	<div class="background">
 		<div class="form-container">
 			<h2>Doctor Registration</h2>
@@ -30,6 +31,7 @@
 
 				<button type="submit" > Register</button>
                 <a routerLink="/doc/login" class="switch-link">Already have an account ?</a>
+				<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
 			</form>
 		</div>
 	</div>
