--- a/users/src/app/components/header/header.component.html
+++ b/users/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <a href="index.html" class="logo me-auto"><img src="assets/img/medical-logo-center-logo-vector-26443645.jpg" style="border-radius: 50%;height: 120px;width: 120px;" alt=""></a>
+      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/medical-logo-center-logo-vector-26443645.jpg" style="border-radius: 50%;height: 120px;width: 120px;" alt=""></a> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <h1 class="logo me-auto"><a href="index.html">Medicio</a></h1> -->
 
