--- a/users/src/app/components/my-profile/my-profile.component.css
+++ b/users/src/app/components/my-profile/my-profile.component.css
@@ -4,6 +4,7 @@
   border-collapse: collapse;
   border-spacing: 0;
   margin: 20px 0;
+  border: 1px solid black;
 }
 
 #example th,
@@ -13,8 +14,8 @@
 }
 
 #example thead th {
-  background-color: lightblue;
-  color: black;
+  background-color: darkblue;
+  color: white;
   font-size: 16px;
   font-weight: 500;
 }
@@ -93,5 +94,20 @@
     font-weight: 500;
   }
 }
+.billsSection{
+  background-color: #f5f5f5;
+    border: 2px solid #000;
+    border-radius: 10px;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 1000px;
 
+}
+.tableContainer{
+  position: relative;
+    height: 50vh;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
+}
    
