--- a/users/src/app/components/sec-layout/sec-layout.component.html
+++ b/users/src/app/components/sec-layout/sec-layout.component.html
@@ -13,7 +13,7 @@
   <h4 style="font-family:Georgia, 'Times New Roman', Times, serif;">Here are your doctor rendezvous requests, you can confirm the rendezvous by clicking on confirm</h4>
 </div>
 
-<table id="example" class="display table table-hover table-condensed">
+<table *ngIf="rvs?.length>0" id="example" class="display table table-hover table-condensed">
   <thead>
     <tr>
       <th>Appointment No</th>
@@ -45,3 +45,8 @@
     </tr>
   </tbody>
 </table>
+<div *ngIf="rvs?.length==0">
+  <h2 style="text-align: center; font-size: 80px;font-weight: bold;letter-spacing: 2px; font-family: fantasy;" >No appointements yet</h2>
+  <br>
+  <h5 style="text-align: center;color: red;">Please wait for patients to request rendez-vous</h5>
+</div>
