--- a/users/src/app/components/secretary-login/secretary-login.component.html
+++ b/users/src/app/components/secretary-login/secretary-login.component.html
@@ -3,6 +3,7 @@
 	<title>Secretary Login</title>
 </head>
 <body>
+	<a class="backtohome" routerLink="/">Back to home Page</a>
 	<div class="background">
 		<div class="form-container">
 			<h2 >Secretary Login</h2>
@@ -17,6 +18,7 @@
 
 				<button type="submit"> Login</button>
 				<a routerLink="/doc/login" class="switch-link">Im a Doctor ! take me to login page</a>
+				<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
 			</form>
 		</div>
 	</div>
