--- a/users/src/app/components/header/header.component.html
+++ b/users/src/app/components/header/header.component.html
@@ -36,6 +36,7 @@
               <li><a style="text-decoration: none;" routerLink="/home/myProfile">Profile</a></li>
               <li><a style="text-decoration: none;" routerLink="/home/myappointements">My RendezVous</a></li>
               <li><a style="text-decoration: none;" routerLink="/MedicalFile/{{id}}">My Medical Files</a></li>
+              <li><a style="text-decoration: none;" routerLink="/home/myMessages">Messages</a></li>
               <li><a style="cursor: pointer;" (click)="logout()">Logout</a></li>
       
               <li class="dropdown notifications-dropdown">
