--- a/users/src/app/components/doc-profile/doc-profile.component.css
+++ b/users/src/app/components/doc-profile/doc-profile.component.css
@@ -179,7 +179,7 @@ html,
 
 body {
 	display: flex;
-	align-items: end;
+	align-items: flex-end;
 	justify-content: flex-end;
   flex-direction: column;
 }
