--- a/users/src/app/components/sec-header/sec-header.component.html
+++ b/users/src/app/components/sec-header/sec-header.component.html
@@ -27,7 +27,7 @@
               <ul>
                 <li><a routerLink="/sec/home/patientProfile">Profile</a></li>
                 <li><a  (click)="logout()" style="cursor: pointer;" >Logout</a></li>
-                <li class="dropdown notifications-dropdown">
+                <!-- <li class="dropdown notifications-dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                      Notifications <i class="fa fa-bell"></i><span style="color:red">1</span>
                   </a>
@@ -47,7 +47,7 @@
                   
                   
                   
-                </li>
+                </li> -->
         
                 
                 
@@ -59,6 +59,7 @@
         
         
         <li><a class="nav-link scrollto" routerLink="/sec/home/patientsList">Patient List</a></li>
+        <li><a class="nav-link scrollto " routerLink="/sec/home/messages">Messages</a></li>
         
           
        
